fix(style): larger buttons

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <label>Item Name (add #tags)</label>
         </div>
         <nav class="right-align">
-            <button class="transparent border" data-ui="#dialog-add">Cancel</button>
-            <button class="primary" id="btn-add-item">Add</button>
+            <button class="transparent border large" data-ui="#dialog-add">Cancel</button>
+            <button class="primary large" id="btn-add-item">Add</button>
         </nav>
     </dialog>
 
@@ -118,7 +118,7 @@
         </div>
         
         <nav class="right-align">
-            <button class="primary" id="btn-save-settings">Save & Connect</button>
+            <button class="primary large" id="btn-save-settings">Save & Connect</button>
         </nav>
     </dialog>
 
