fix(style): drawer from bottom

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </button>
 
     <!-- Add Item Dialog -->
-    <dialog id="dialog-add" class="max">
+    <dialog id="dialog-add" class="bottom">
         <h5>Add Item</h5>
         <div class="field label border">
             <input type="text" id="inp-new-title">
@@ -91,20 +91,20 @@
     </dialog>
 
     <!-- Edit Item Dialog -->
-    <dialog id="dialog-edit" class="max">
+    <dialog id="dialog-edit" class="bottom">
         <h5>Edit Item</h5>
         <div class="field label border">
             <input type="text" id="inp-edit-title">
             <label>Item Name (add #tags)</label>
         </div>
         <nav class="right-align">
-            <button class="transparent border" data-ui="#dialog-edit">Cancel</button>
-            <button class="primary" id="btn-save-edit">Save</button>
+            <button class="transparent border large" data-ui="#dialog-edit">Cancel</button>
+            <button class="primary large" id="btn-save-edit">Save</button>
         </nav>
     </dialog>
 
     <!-- Settings Dialog -->
-    <dialog id="dialog-settings" class="max">
+    <dialog id="dialog-settings" class="bottom">
         <h5>Connection Settings</h5>
         <p class="small-text">Connect to your NoCoDB Table.</p>
         
