--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a id="search-clear" style="visibility: hidden;"><i>close</i></a>
                 </div>
                 <button class="circle transparent margin-left" id="btn-toggle-done">
-                    <i>filter_alt_off</i>
+                    <i>filter_list_off</i>
                 </button>
             </div>
             
