--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     <title>Shopping List</title>
     
     <!-- PWA -->
@@ -32,7 +32,7 @@
 <body class="dark">
     
     <!-- Top App Bar -->
-    <header class="surface-container" style="position: sticky; top: 0; z-index: 50;">
+    <header class="surface-container">
         <nav>
             <button class="circle transparent">
               <img class="responsive" src="./assets/apple-touch-icon.png">
