fix(style): padding

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
 
         <!-- Search & Filter -->
-        <div class="padding" style="overflow: hidden">
+        <div class="vertical-padding" style="overflow: hidden">
             <div class="row no-wrap middle-align">
                 <div class="field round prefix suffix surface max">
                     <i>search</i>
